[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/MainScenes.gd" type="Script" id=1]

[node name="MainScenes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 467.0
margin_top = 230.0
margin_right = 557.0
margin_bottom = 370.0
alignment = 1

[node name="Sprite" type="Sprite" parent="CenterContainer/VBoxContainer"]

[node name="ButtonSolo" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
text = "Solo"

[node name="ButtonMultiLocal" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 44.0
text = "Multi Locale"

[node name="ButtonMulti" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 90.0
margin_bottom = 68.0
text = "Multi online"

[node name="ButtonCredit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 90.0
margin_bottom = 92.0
text = "Credit"

[node name="ButtonQuit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 90.0
margin_bottom = 116.0
text = "Quitter"

[node name="ButtonQuit2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 90.0
margin_bottom = 140.0
text = "Quitter"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonSolo" to="." method="_on_ButtonSolo_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonMultiLocal" to="." method="_on_ButtonMultiLocal_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonMulti" to="." method="_on_ButtonMulti_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonCredit" to="." method="_on_ButtonCredit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonQuit2" to="." method="_on_ButtonQuit2_pressed"]
